# KungFuChess

./: .gitignore  CMakeLists.txt  README.md  SOLUTION_SUMMARY.md  build.ps1  debug_test.cpp  fix_moves.py  run.ps1  run_merged.bat  run_merged.ps1  run_simple.ps1
pieces/BW/states/jump/: config.json
pieces/KW/states/jump/: config.json
pieces/NB/states/short_rest/: config.json
pieces/PB/states/: transitions.csv
pieces/PW/states/move/: config.json
pieces/QB/states/: transitions.csv
pieces/RB/states/long_rest/: config.json
src/: AudioManager.cpp  AudioManager.hpp  Board.cpp  Board.hpp  CaptureRules.cpp  CaptureRules.hpp  Command.hpp  Common.hpp  EventSystem.cpp  EventSystem.hpp  Game.cpp  Game.hpp  Graphics.cpp  Graphics.hpp  GraphicsFactory.hpp  MoveHistoryManager.cpp  MoveHistoryManager.hpp  Moves.cpp  Moves.hpp  Physics.hpp  PhysicsFactory.hpp  Piece.hpp  PieceFactory.hpp  ScoreManager.cpp  ScoreManager.hpp  State.hpp  TextManager.cpp  TextManager.hpp  main.cpp
src/img/: OpenCvImg.cpp  OpenCvImg.hpp
